@@ -15,6 +15,8 @@ PHP                                                                        NEWS
   . Fix compile error when php_libxml.h header is included in C++.
     (Remi, nielsdos)
   . Add missing NULL pointer error check. (icy17)
+  . Fixed bug #47531 (No way of removing redundant xmlns: declarations).
+    (nielsdos)
 
 - Fiber:
   . Fixed bug GH-11121 (ReflectionFiber segfault). (danog, trowski, bwoebi)
